--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "dev": "next dev && sass --watch --update --style=expanded styles/scss:styles/css",
+    "build": "npm run build:scss && next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "build:scss": "sass styles/scss -o styles/css"
   },
   "dependencies": {
     "next": "14.1.0",
@@ -20,5 +21,10 @@
     "postcss": "^8",
     "sass": "^1.70.0",
     "tailwindcss": "^3.3.0"
-  }
+  },
+  "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
+  "main": "postcss.config.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
