--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev && sass --watch --update --style=expanded styles/scss:styles/css",
-    "build": "npm run build:scss && next build",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "build:scss": "sass styles/scss -o styles/css"
